# ChangeLog for dev-php/pecl-apc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-apc/ChangeLog,v 1.10 2012/07/11 23:04:36 blueness Exp $

  11 Jul 2012; Anthony G. Basile <blueness@gentoo.org> pecl-apc-3.1.10.ebuild:
  Keyword ~mips

  17 Jun 2012; Ole Markus With <olemarkus@gentoo.org> -pecl-apc-3.1.7.ebuild,
  -pecl-apc-3.1.9-r1.ebuild, -pecl-apc-3.1.9.ebuild:
  Removing older versions

  17 Jun 2012; Kacper Kowalik <xarthisius@gentoo.org> pecl-apc-3.1.9-r2.ebuild:
  ppc64 stable wrt #402919

*pecl-apc-3.1.10 (11 Apr 2012)

  11 Apr 2012; Ole Markus With <olemarkus@gentoo.org> +pecl-apc-3.1.10.ebuild:
  Version bump. Works with php 5.4

  01 Mar 2012; Brent Baude <ranger@gentoo.org> pecl-apc-3.1.9-r2.ebuild:
  Marking pecl-apc-3.1.9-r2 ppc for bug 402919

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  pecl-apc-3.1.9-r2.ebuild:
  x86 stable wrt bug #402919

  13 Feb 2012; Agostino Sarubbo <ago@gentoo.org> pecl-apc-3.1.9-r2.ebuild:
  Stable for amd64, wrt bug #402919

*pecl-apc-3.1.9-r2 (09 Sep 2011)

  09 Sep 2011; Ole Markus With <olemarkus@gentoo.org>
  +pecl-apc-3.1.9-r2.ebuild:
  Added revbump with support of various locking mechanism. Bug 369635

*pecl-apc-3.1.9-r1 (22 Jul 2011)

  22 Jul 2011; <olemarkus@gentoo.org> +pecl-apc-3.1.9-r1.ebuild,
  +files/pecl-apc.ini:
  Supplying custom ini files instead of building one through the ext eclass

*pecl-apc-3.1.9 (15 May 2011)

  15 May 2011; <olemarkus@gentoo.org> -pecl-apc-3.1.8.ebuild,
  +pecl-apc-3.1.9.ebuild:
  Added 3.1.9. Removed 3.1.8 due to a critical regression fixed in 3.1.9

*pecl-apc-3.1.8 (02 May 2011)

  02 May 2011; <olemarkus@gentoo.org> +pecl-apc-3.1.8.ebuild:
  Version bump

  19 Apr 2011; <olemarkus@gentoo.org> pecl-apc-3.1.7.ebuild:
  Fixed postinst log message. Thanks to Michael Gisbers for patch. Bug 362413

  24 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> pecl-apc-3.1.7.ebuild:
  ppc/ppc64 stable wrt #355611