@@ -1,6 +1,11 @@
 # ChangeLog for dev-php/pecl-apc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-apc/ChangeLog,v 1.10 2012/07/11 23:04:36 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-apc/ChangeLog,v 1.11 2012/07/24 18:32:55 olemarkus Exp $
+
+*pecl-apc-3.1.11 (24 Jul 2012)
+
+  24 Jul 2012; Ole Markus With <olemarkus@gentoo.org> +pecl-apc-3.1.11.ebuild:
+  Version bump
 
   11 Jul 2012; Anthony G. Basile <blueness@gentoo.org> pecl-apc-3.1.10.ebuild:
   Keyword ~mips
